--- a/front_office/app/components/gererUE/gererUE.html
+++ b/front_office/app/components/gererUE/gererUE.html
@@ -8,7 +8,5 @@
 				<li class="list-group-item" >{{ue.numero}} : {{ue.label}}</li>
 			</a>
     </ul>
-		<a routerLink= "/gererUE/ajouter" [routerLinkActive]="['router-link-active']" class="surligne">
-			Ajouter
-		</a>
+		<button (click)="ajoutUE()">Ajouter Personnel</button>
 </div>
