--- a/front_office/app/components/gererUE/gererUE.html
+++ b/front_office/app/components/gererUE/gererUE.html
@@ -8,5 +8,7 @@
 				<li class="list-group-item" >{{ue.numero}} : {{ue.label}}</li>
 			</a>
     </ul>
-		<button (click)="ajoutUE()">Ajouter Personnel</button>
+		<a routerLink= "/gererUE/ajouter" [routerLinkActive]="['router-link-active']" class="surligne">
+			Ajouter
+		</a>
 </div>
