--- a/front_office/app/components/gererDroits/gererDroits.html
+++ b/front_office/app/components/gererDroits/gererDroits.html
@@ -1,18 +1,28 @@
 <h1>Gérer Droits</h1>
-<input id="input" type="text" size="30" pInputText [(ngModel)]="text" />
+<input id="input" type="text" size="30" pInputText [(ngModel)]="urlGet" />
 <button (click)="getData()">Test ton biftek</button>
-<p>Output : {{value}}</p>
+<p>Output : {{resultGet}}</p>
 <br />
 Link :
-<input id="input" type="text" size="30" pInputText [(ngModel)]="link" />
+<input id="input" type="text" size="30" pInputText [(ngModel)]="urlPost" />
 Value :
-<input id="input" type="text" size="30" pInputText [(ngModel)]="data" />
+<input id="input" type="text" size="30" pInputText [(ngModel)]="dataPost" />
 <button (click)="postData()">Test ton PO PO PO POST</button>
+<p>Result : {{resultPost}}</p>
 <br />
 <br />
 Link :
-<input id="input" type="text" size="30" pInputText [(ngModel)]="deleteLink" />
+<input id="input" type="text" size="30" pInputText [(ngModel)]="urlPut" />
+<button (click)="putData()">Tous des put</button>
+Value :
+<input id="input" type="text" size="30" pInputText [(ngModel)]="dataPut" />
+<button (click)="putData()">Tous des put</button>
+<p>Result : {{resultPut}}</p>
+<br />
+<br />
+Link :
+<input id="input" type="text" size="30" pInputText [(ngModel)]="urlDelete" />
 ID :
-<input id="input" type="text" size="30" pInputText [(ngModel)]="deleteID" />
+<input id="input" type="text" size="30" pInputText [(ngModel)]="idDelete" />
 <button (click)="deleteData()">Delete au bout du monde</button>
-<p>Result : {{val}}</p>
+<p>Result : {{resultDelete}}</p>
