Ajout de la fonctionnalité de modification d'un statuts dans gererStatuts

--- a/front_office/app/components/gererStatuts/vueStatuts.html
+++ b/front_office/app/components/gererStatuts/vueStatuts.html
@@ -23,6 +23,10 @@
 				</tbody>
 			</table>
 			<button (click)="deleteStatut(id)">Supprimer</button>
+			<a routerLink="/gererStatuts/{{id}}/modifier" [routerLinkActive]="['router-link-active']" class="surligne">
+				<button>Modifier</button>
+			</a>
+
 		</div>
 	</div>
 </div>
