--- a/front_office/app/components/gererStatuts/ajouterStatuts.html
+++ b/front_office/app/components/gererStatuts/ajouterStatuts.html
@@ -9,7 +9,7 @@
   <div class="form-group">
     <label class="control-label col-sm-2" for="heures">Heures :</label>
     <div class="col-sm-4">
-      <input id="heures" type="text" class="form-control" pInputText [(ngModel)]="heures" [ngModelOptions]="{standalone: true}" />
+      <input id="heures" type="number" class="form-control" pInputText [(ngModel)]="heures" [ngModelOptions]="{standalone: true}" />
     </div>
   </div>
   <div class="form-group">
