--- a/front_office/app/components/gererStatuts/vueStatuts.html
+++ b/front_office/app/components/gererStatuts/vueStatuts.html
@@ -1,13 +1,16 @@
 <div class="col-md-offset-1"><h2>Fiche Statut :</h2></div>
+
 <div *ngIf="statuts">
 	<div class="col-md-1"></div>
 	<div class="col-md-4 well well-sm">
 		<h3>Nom du statut : {{statuts.label}}</h3>
 		<h4>Service annuel (TD/TP) : {{statuts.heures}}</h4>
 		<div>
-			<button (click)="deleteStatut(id)">Supprimer</button>
+			<p-growl [value]="msgs"></p-growl>
+			<p-confirmDialog acceptIcon="glyphicon glyphicon-ok" acceptLabel="Supprimer" rejectIcon="glyphicon glyphicon-remove" rejectLabel="Annuler" width="425"></p-confirmDialog>
+			<button type="button" (click)="confirm()" pButton icon="glyphicon glyphicon-trash" label="Supprimer"></button>
 			<a routerLink="/gererStatuts/{{id}}/modifier" [routerLinkActive]="['router-link-active']" class="surligne">
-				<button>Modifier</button>
+				<button type="button">Modifier</button>
 			</a>
 		</div>
 	</div>
@@ -24,6 +27,9 @@
 				<tr *ngFor="let personnel of personnels">
 					<td>{{personnel.nom}} {{personnel.prenom}}</td>
 				</tr>
+			</tbody>
+			<tbody *ngIf="personnels == ''">
+				<tr><td>Aucun</td></tr>
 			</tbody>
 		</table>
 		<!--  -->
