--- a/front_office/app/components/gererUE/vueUE.html
+++ b/front_office/app/components/gererUE/vueUE.html
@@ -19,7 +19,9 @@
 					</tr>
 				</tbody>
 			</table>
-			<button>Modifier</button>
+			<a routerLink="/gererUE/{{id}}/modifier" [routerLinkActive]="['router-link-active']" class="surligne">
+				<button type="button">Modifier l'UE</button>
+			</a>
 			<hr/>
 
 			<h4>Liste des personnes ayant cette UE :</h4>
@@ -41,7 +43,12 @@
 			</table>
 			<button>Ajouter des professeurs dans la liste</button>
 			<hr/>
-			<p-dialog header="Suppression d'un UE" [(visible)]="displayDial" modal="modal" responsive="true">
+			<div>
+				<p-growl [value]="msgs"></p-growl>
+				<p-confirmDialog acceptIcon="glyphicon glyphicon-ok" acceptLabel="Supprimer" rejectIcon="glyphicon glyphicon-remove" rejectLabel="Annuler" width="425"></p-confirmDialog>
+				<button type="button" (click)="confirm()" pButton icon="glyphicon glyphicon-trash" label="Supprimer"></button>
+			</div>
+			<!--<p-dialog header="Suppression d'un UE" [(visible)]="displayDial" modal="modal" responsive="true">
     	<p>Etes-vous sûr de supprimer l'UE {{UE.numero}} : {{UE.label}} ?</p>
         	<footer>
 	            <div class="ui-dialog-buttonpane ui-widget-content ui-helper-clearfix">
@@ -49,10 +56,9 @@
 	                <button type="button" (click)=deleteUE(id) label="Supprimer">Supprimer</button>
 	            </div>
         	</footer>
-			</p-dialog>
+			</p-dialog>-->
 
-			<button type="text" (click)="showDialog()" label="Supprimer">Supprimer</button>
-
+			<!--<button type="text" (click)="showDialog()" label="Supprimer">Supprimer</button>-->
 		<!--	<div class="modal-header"><h2>Suppression d'un UE</h2></div>
 			<div class="modal-body">Etes-vous sûr de supprimer l'UE {{UE.numero}} : {{UE.label}} ?</div>
 			<div class="modal-footer">
