Gerer Personnel Developpement de la liste et le design du select Page

--- a/front_office/app/components/gererPersonnel/selectPersonnel.html
+++ b/front_office/app/components/gererPersonnel/selectPersonnel.html
@@ -1,1 +1,2 @@
-Select
+<img class= "pull-right" src="./../../app/img/fleche.png" alt="HTML5 Icon" style="width:200px;height:200px;">
+<p style = "text-align:center; font-size: 50px; margin-top: 300px"> selectionner un personnel </p> 
