--- a/front_office/app/components/gererPersonnel/gererPersonnel.html
+++ b/front_office/app/components/gererPersonnel/gererPersonnel.html
@@ -2,19 +2,23 @@
 	<router-outlet></router-outlet>
 </div>
 
-<div *ngIf="listePersonnel" class="col-md-2">
-	<div class="container">
-        <div class="col-md-3">  
-          	<div class="well" id="well2">
-			    <div *ngFor="let personnel of listePersonnel" (click)="change()" class="list-group">
-					<a  routerLink= "/gererPersonnel/{{personnel.id}}" [routerLinkActive]="['router-link-active']" class="surligne" >
-                        <div class="list-group-item-heading">{{personnel.prenom}} {{personnel.nom}} </div>
-                    </a>
-                </div>
-      		</div>
-    	</div>
+<div class="col-md-2">
+	<div *ngIf="listePersonnel">
+		<div style="  width: 100%; " class="pull-right" >
+		  <div class="panel panel-primary">
+				    <div class="panel-heading">
+				      <span class="glyphicon glyphicon-user"></span>  <span style= "font-weight: bold;"> Personnel: </span>
+				        <ul *ngFor="let personnel of listePersonnel"  style=" height:15px; word-wrap: break-word;" >  
+								<li style = "list-style-type: none;" > 
+									<a style=" color: white;" routerLink= "/gererPersonnel/{{personnel.id}}" [routerLinkActive]="['router-link-active']" (click)="loadPage()" class="surligne"> {{ personnel.prenom }}  {{ personnel.nom}} </a>
+							    </li>
+				        </ul>
+				   </div>
+			</div>
+		</div>
 	</div>
-	<a routerLink= "/gererPersonnel/ajouter" [routerLinkActive]="['router-link-active']" class="surligne">
-			Ajouter
-	</a>
 </div>
+
+
+
+
