--- a/front_office/app/components/gererStatuts/selectStatuts.html
+++ b/front_office/app/components/gererStatuts/selectStatuts.html
@@ -1,1 +1,2 @@
-Veuillez sélectionner un statut
+<img class= "pull-right" src="../../app/img/fleche.png" alt="HTML5 Icon" style="width:200px;height:200px;">
+<p style = "text-align:center; font-size: 50px; margin-top: 300px"> selectionner un statut </p> 
