--- a/front_office/app/components/gererStatuts/ajouterStatuts.html
+++ b/front_office/app/components/gererStatuts/ajouterStatuts.html
@@ -1,19 +1,19 @@
 <div class="col-sm-offset-3"><h2>Ajouter un Statut :</h2></div>
 <form class="form-horizontal">
   <div class="form-group">
-    <label class="control-label col-sm-2" for="nomStatut">Nom Statuts :</label>
+    <label class="control-label col-sm-2" for="nomStatut" required="" >Nom Statuts :</label>
     <div class="col-sm-4">
       <input id="nomStatut" type="text" class="form-control" pInputText [(ngModel)]="label" [ngModelOptions]="{standalone: true}" />
     </div>
   </div>
   <div class="form-group">
-    <label class="control-label col-sm-2" for="heures">Heures :</label>
+    <label class="control-label col-sm-2" for="heures" required="">Heures :</label>
     <div class="col-sm-4">
       <input id="heures" type="number" class="form-control" pInputText [(ngModel)]="heures" [ngModelOptions]="{standalone: true}" />
     </div>
   </div>
   <div class="form-group">
-    <label class="control-label col-sm-2" for="autorisation">Autorisation :</label>
+    <label class="control-label col-sm-2" for="autorisation" required="">Autorisation :</label>
     <div class="col-sm-4">
       <input id="autorisation" type="text" class="form-control" pInputText [(ngModel)]="autorisation" [ngModelOptions]="{standalone: true}" />
     </div>
