Mise à jour de GererPersonnel avec les boutons d ajout et de suppression et corrections dans le gerer UE

--- a/front_office/app/components/gererPersonnel/modifierPersonnel.html
+++ b/front_office/app/components/gererPersonnel/modifierPersonnel.html
@@ -1,4 +1,4 @@
-<div class="col-sm-offset-3"><h2>Ajouter un Personnel :</h2></div>
+<div class="col-sm-offset-3"><h2>Modifier Personnel :</h2></div>
 <form class="form-horizontal">
   <div class="form-group">
     <label class="control-label col-sm-2" for="nom">Nom : </label>
@@ -31,7 +31,6 @@
     </div>
   </div>
   <div class="col-sm-offset-2 col-sm-10">
-    <a routerLink="../" [routerLinkActive]="['router-link-active']" class="button">Annuler</a>
-    <button type="submit" class="btn btn-default" (click)="ajouterPersonnel()">Enregistrer</button>
+    <button type="submit" class="btn btn-default" (click)="modifierPersonnel()">Modifier</button>
   </div>
 </form>
