--- a/front_office/app/components/gererUE/vueUE.html
+++ b/front_office/app/components/gererUE/vueUE.html
@@ -21,8 +21,11 @@
 			</table>
 			<p-growl [value]="msgs"></p-growl>
 			<a routerLink="/gererUE/{{id}}/modifier" [routerLinkActive]="['router-link-active']" class="surligne">
-				<button type="button" pButton icon="glyphicon glyphicon-cog" label="Modifier"></button>
+				<button type="button" pButton icon="glyphicon glyphicon-cog" label="Modifier l'UE"></button>
 			</a>
+			<p-growl [value]="msgs"></p-growl>
+			<p-confirmDialog acceptIcon="glyphicon glyphicon-ok" acceptLabel="Supprimer" rejectIcon="glyphicon glyphicon-remove" rejectLabel="Annuler" width="425"></p-confirmDialog>
+			<button type="button" (click)="confirm()" pButton icon="glyphicon glyphicon-trash" label="Supprimer l'UE"></button>
 			<hr/>
 
 			<h4>Liste des personnes ayant cette UE :</h4>
@@ -42,13 +45,7 @@
 					</tr>
 				</tbody>
 			</table>
-			<button>Ajouter des professeurs dans la liste</button>
-			<hr/>
-			<div>
-				<p-growl [value]="msgs"></p-growl>
-				<p-confirmDialog acceptIcon="glyphicon glyphicon-ok" acceptLabel="Supprimer" rejectIcon="glyphicon glyphicon-remove" rejectLabel="Annuler" width="425"></p-confirmDialog>
-				<button type="button" (click)="confirm()" pButton icon="glyphicon glyphicon-trash" label="Supprimer"></button>
-			</div>
+			<button type="button" pButton icon="glyphicon glyphicons-plus-sign" label="Ajouter des professeurs dans la liste"></button>
 			<!--<p-dialog header="Suppression d'un UE" [(visible)]="displayDial" modal="modal" responsive="true">
     	<p>Etes-vous sûr de supprimer l'UE {{UE.numero}} : {{UE.label}} ?</p>
         	<footer>
