--- a/front_office/app/components/gererPersonnel/gererPersonnel.html
+++ b/front_office/app/components/gererPersonnel/gererPersonnel.html
@@ -8,8 +8,8 @@
 		  <div class="panel panel-primary">
 				    <div class="panel-heading">
 				      <span class="glyphicon glyphicon-user"></span>  <span style= "font-weight: bold;"> Personnel: </span>
-				        <ul *ngFor="let personnel of listePersonnel"  style=" height:15px; word-wrap: break-word;" >  
-								<li style = "list-style-type: none;" > 
+				        <ul *ngFor="let personnel of listePersonnel"  style=" height:15px; word-wrap: break-word;" >
+								<li style = "list-style-type: none;" >
 									<a style=" color: white;" routerLink= "/gererPersonnel/{{personnel.id}}" [routerLinkActive]="['router-link-active']" (click)="loadPage()" class="surligne"> {{ personnel.prenom }}  {{ personnel.nom}} </a>
 							    </li>
 				        </ul>
@@ -17,8 +17,7 @@
 			</div>
 		</div>
 	</div>
+	<a routerLink= "/gererPersonnel/ajouter" [routerLinkActive]="['router-link-active']" class="surligne">
+		<button>Ajouter</button>
+	</a>
 </div>
-
-
-
-
