--- a/front_office/app/components/gererUE/gererUE.html
+++ b/front_office/app/components/gererUE/gererUE.html
@@ -1,8 +1,8 @@
-<div class="col-md-10">
+<div class="col-md-9">
 	<router-outlet></router-outlet>
 </div>
 
-<div *ngIf="listeUE" class="col-md-2">
+<!--<div *ngIf="listeUE" class="col-md-2">
     <ul *ngFor="let ue of listeUE"  class="list-group">
 			<a routerLink= "/gererUE/{{ue.id}}" [routerLinkActive]="['router-link-active']" (click)="loadPage()" class="surligne">
 				<li class="list-group-item" >{{ue.numero}} : {{ue.label}}</li>
@@ -11,4 +11,26 @@
 		<a routerLink= "/gererUE/ajouter" [routerLinkActive]="['router-link-active']" class="surligne">
 			Ajouter
 		</a>
+</div>-->
+
+<div class="col-md-3">
+	<div *ngIf="listeUE">
+		<div style="width: 100%" class="pull-right" >
+		  <div class="panel panel-primary">
+				    <div class="panel-heading">
+				      <span class="glyphicon glyphicon-pencil"></span>
+							<span style= "font-weight: bold;"> Liste des UE :</span>
+							<hr style= "margin-top:10px ; margin-bottom:10px"/>
+				        <ul *ngFor="let ue of listeUE"  style=" height:15px; word-wrap: break-word;" >
+									<li style = "list-style-type: none;">
+										<a style=" color: white;" routerLink= "/gererUE/{{ue.id}}" [routerLinkActive]="['router-link-active']" (click)="loadPage()" class="surligne">{{ue.numero}} : {{ue.label}}</a><br/>
+									</li>
+								</ul>
+				   </div>
+			</div>
+		</div>
+		<a routerLink= "/gererUE/ajouter" [routerLinkActive]="['router-link-active']" class="surligne">
+			<button>Ajouter</button>
+		</a>
+	</div>
 </div>
