--- a/front_office/app/components/gererPersonnel/modifierPersonnel.html
+++ b/front_office/app/components/gererPersonnel/modifierPersonnel.html
@@ -19,9 +19,9 @@
     </div>
   </div>
   <div class="form-group">
-    <label class="control-label col-sm-2" for="Statut">Statut : </label>
+    <label class="control-label col-sm-2" for="statut">Statut : </label>
     <div class="col-sm-4">
-      <input id="Statut" type="text" class="form-control" pInputText [(ngModel)]="Statut" [ngModelOptions]="{standalone: true}" />
+      <input id="statut" type="text" class="form-control" pInputText [(ngModel)]="statut" [ngModelOptions]="{standalone: true}" />
     </div>
   </div>
   <div class="form-group">
