Ajout d'un popup fonctionnel pour gererUE + suppression d'un lien caché

--- a/front_office/app/components/accueil/accueil.html
+++ b/front_office/app/components/accueil/accueil.html
@@ -71,7 +71,7 @@
           </tr>
         </tbody>
       </table>
-      <a routerLink="../interventions" [routerLinkActive]="['router-link-active']" class="surligne" style="float:right">Voir plus</a>
+      <a routerLink="../problemes" [routerLinkActive]="['router-link-active']" class="surligne" style="float:right">Voir plus</a>
     </div>
   </div>
   <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
