--- a/front_office/app/components/gererPersonnel/vuePersonnel.html
+++ b/front_office/app/components/gererPersonnel/vuePersonnel.html
@@ -7,7 +7,7 @@
 				<p>Statut : {{personnel.statut}}</p>
 				<p>E-Mail : {{personnel.email}}</p>
 				<p>Droits : Visible que par les administrateur ()</p>
-				<p-growl [value]="msgs"></p-growl>
+				<p-growl [value]="msgperso"></p-growl>
 				<p-confirmDialog acceptIcon="glyphicon glyphicon-ok" acceptLabel="Supprimer" rejectIcon="glyphicon glyphicon-remove" rejectLabel="Annuler" width="425"></p-confirmDialog>
 				<button type="button" (click)="confirm()" pButton icon="glyphicon glyphicon-trash" label="Supprimer"></button>
 				<a routerLink="/gererPersonnel/{{id}}/modifier" [routerLinkActive]="['router-link-active']" class="surligne">
