--- a/front_office/app/components/gererUE/gererUE.html
+++ b/front_office/app/components/gererUE/gererUE.html
@@ -20,7 +20,7 @@
 		  <div class="panel panel-primary">
 				    <div class="panel-heading">
 				      <span class="glyphicon glyphicon-pencil"></span>
-							<span style= "font-weight: bold;"> Liste des UE :</span>
+							<span style= "font-weight: bold;"> Liste des UE</span>
 							<hr style= "margin-top:10px ; margin-bottom:10px"/>
 				        <ul *ngFor="let ue of listeUE"  style=" height:15px; word-wrap: break-word;" >
 									<li style = "list-style-type: none;">
