--- a/front_office/app/components/gererStatuts/gererStatuts.html
+++ b/front_office/app/components/gererStatuts/gererStatuts.html
@@ -10,9 +10,10 @@
 		<div style="  width: 100%; " class="pull-right" >
 		  <div class="panel panel-primary">
 				    <div class="panel-heading">
-				      <span class="glyphicon glyphicon-pencil"></span>  <span style= "font-weight: bold;"> Statut: </span> 
-				        <ul *ngFor="let statuts of listeStatuts"  style=" height:15px; word-wrap: break-word;" >  
-								<li style = "list-style-type: none;" > 
+				      <span class="glyphicon glyphicon-pencil"></span>  <span style= "font-weight: bold;"> Statut </span>
+							<hr style= "margin-top:10px ; margin-bottom:10px"/>
+				        <ul *ngFor="let statuts of listeStatuts"  style=" height:15px; word-wrap: break-word;" >
+								<li style = "list-style-type: none;" >
 									<a style=" color: white;" routerLink= "/gererStatuts/{{statuts.id}}" [routerLinkActive]="['router-link-active']" (click)="loadPage()" class="surligne"> {{statuts.label}} </a>
 							    </li>
 				        </ul>
@@ -24,4 +25,3 @@
 			<button>Ajouter</button>
 		</a>
 </div>
-
