correction bug connexion pour admin

--- a/front_office/app/components/accueil/accueil.html
+++ b/front_office/app/components/accueil/accueil.html
@@ -54,7 +54,7 @@
 </div>
 
 
-<div id="sco" *ngIf="utilisateur == 'scolarite' ">
+<div id="sco" *ngIf="utilisateur == 'scolarite' || utilisateur == 'admin'">
   <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
     <div class="table-responsive">
       <table class="table table-condensed table-striped table-bordered table-hover no-margin">
