--- a/front_office/app/components/gererDroits/gererDroits.html
+++ b/front_office/app/components/gererDroits/gererDroits.html
@@ -1,27 +1,25 @@
-<h1>Gérer Droits</h1>
-<input id="input" type="text" size="30" pInputText [(ngModel)]="urlGet" />
-<button (click)="getData()">GET</button>
-<p>Output : {{resultGet}}</p>
-<br />
-Link :
-<input id="input" type="text" size="30" pInputText [(ngModel)]="urlPost" />
-Value :
-<input id="input" type="text" size="30" pInputText [(ngModel)]="dataPost" />
-<button (click)="postData()">POST</button>
-<p>Result : {{resultPost}}</p>
-<br />
-<br />
-Link :
-<input id="input" type="text" size="30" pInputText [(ngModel)]="urlPut" />
-Value :
-<input id="input" type="text" size="30" pInputText [(ngModel)]="dataPut" />
-<button (click)="putData()">PUT</button>
-<p>Result : {{resultPut}}</p>
-<br />
-<br />
-Link :
-<input id="input" type="text" size="30" pInputText [(ngModel)]="urlDelete" />
-ID :
-<input id="input" type="text" size="30" pInputText [(ngModel)]="idDelete" />
-<button (click)="deleteData()">DELETE</button>
-<p>Result : {{resultDelete}}</p>
+<p-growl [value]="msgperso"></p-growl>
+<div class="col-md-10">
+	<router-outlet></router-outlet>
+</div>
+
+<div class="col-md-2">
+	<div *ngIf="listePersonnel">
+		<div style="  width: 100%; " class="pull-right" >
+		  <div class="panel panel-primary">
+				    <div class="panel-heading">
+				      <span class="glyphicon glyphicon-user"></span>  <span style= "font-weight: bold;"> Personnel </span>
+							<hr style= "margin-top:10px ; margin-bottom:10px"/>
+				        <ul *ngFor="let personnel of listePersonnel"  style=" height:15px; word-wrap: break-word;" >
+  								<li style = "list-style-type: none;" >
+  									<a style=" color: white;" routerLink= "/gererDroits/{{personnel.id}}" [routerLinkActive]="['router-link-active']" (click)="loadPage()" class="surligne"> {{ personnel.prenom }}  {{ personnel.nom}} </a>
+							    </li>
+				        </ul>
+				   </div>
+			</div>
+		</div>
+	</div>
+	<a routerLink= "/gererPersonnel/ajouter" [routerLinkActive]="['router-link-active']" class="surligne">
+		<button>Ajouter</button>
+	</a>
+</div>
