fixation bug authentification

--- a/front_office/app/components/accueil/accueil.html
+++ b/front_office/app/components/accueil/accueil.html
@@ -1,4 +1,4 @@
-<div *ngIf="utilisateur == 'prof' ">
+<div *ngIf="utilisateur == 'enseignant' ">
   <div class="progress" style="height:25px">
     <div class="progress-bar progress-bar-success" role="progressbar" style="width:25%">
       CM : 32h
