--- a/front_office/app/components/gererPersonnel/vuePersonnel.html
+++ b/front_office/app/components/gererPersonnel/vuePersonnel.html
@@ -7,12 +7,6 @@
 				<p>Statut : {{personnel.statut}}</p>
 				<p>E-Mail : {{personnel.email}}</p>
 				<p>Droits : Visible que par les administrateur ()</p>
-				<p-growl [value]="msgperso"></p-growl>
-				<p-confirmDialog acceptIcon="glyphicon glyphicon-ok" acceptLabel="Supprimer" rejectIcon="glyphicon glyphicon-remove" rejectLabel="Annuler" width="425"></p-confirmDialog>
-				<button type="button" (click)="confirm()" pButton icon="glyphicon glyphicon-trash" label="Supprimer"></button>
-				<a routerLink="/gererPersonnel/{{id}}/modifier" [routerLinkActive]="['router-link-active']" class="surligne">
-					<button type="button" pButton icon="glyphicon glyphicon-cog" label="Modifier"></button>
-				</a>
 			</div>
 			<div class="col-md-6">
 				<h3> Heures de travail </h3>
@@ -34,27 +28,21 @@
 			<div class="col-md-6">
 				<h3> Ses interventions </h3>
 				<div class="table-responsive"style="width: 100%">
-				  <table class="well well-lg table table-striped">
-						<thead>
-							<tr>
-								<th>NumUE</th>
-								<th>Matière</th>
-								<th>Type</th>
-								<th>Heure</th>
-							</tr>
-						</thead>
-						<tbody *ngIf="interventions">
-							<tr *ngFor="let intervention of interventions">
-								<td>{{intervention.numUE}}</td>
-								<td>{{intervention.intitule}}</td>
-								<td>{{intervention.type}}</td>
-								<td>{{intervention.heure}}</td>
-							</tr>
-						</tbody>
-						<tbody *ngIf="interventions == ''">
-							<tr><td>Aucun</td></tr>
-						</tbody>
-					</table>
+				   <table class="well well-lg table table-striped">
+			<thead>
+				<tr>
+					<th></th>
+				</tr>
+			</thead>
+			<tbody *ngIf="personnels">
+				<tr *ngFor="let personnel of personnels">
+					<td>{{personnel.nom}} {{personnel.prenom}}</td>
+				</tr>
+			</tbody>
+			<tbody *ngIf="personnels == ''">
+				<tr><td>Aucun</td></tr>
+			</tbody>
+		</table>
 				</div>
 			</div>
 			<div class="col-md-6">
@@ -84,4 +72,4 @@
 			<p>Nombre Heures TD</p>
 			<p>Nombre Heures TP</p>
 		</div>
-	</div>
+	</div>				
