--- a/front_office/app/shared/navbar/navbar.component.html
+++ b/front_office/app/shared/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav>
-	<div *ngIf="utilisateur == 'prof' ">
+	<div *ngIf="utilisateur == 'enseignant' ">
 		  <a routerLink="accueil" [routerLinkActive]="['router-link-active']" class="surligne">Accueil</a>
 		  <a routerLink="interventions" [routerLinkActive]="['router-link-active']" class="surligne">Interventions</a>
 		  <a routerLink="decharges" [routerLinkActive]="['router-link-active']" class="surligne">Décharges</a>
